--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,11 @@ iframe {
     position: absolute;
 }
 
+#to-do {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
 #welcome-video {
     margin-top: 10px;
 }
