--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,18 @@ iframe {
 #welcome-video {
     margin-top: 10px;
 }
+
+#edfest {
+    width: 100%;
+    height: 100%;
+    background: url('../images/performance.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+.to-do-text {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 20px;
+    color: black;
+    float: left;
+    background-color: blanchedalmond;
+}
