--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,16 @@ iframe {
 }
 
 #food {
-    height: max-content;
- 
-    margin-bottom: 25%;
-    background: url('.../images/sushi.jpg') no-repeat center center;
+    width: 100%;
+    height: 500px;
+    background-image: url('../images/neon-sushi.jpg') no-repeat center center;
+}
+
+.to-do-text2 {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 5px;
+  
+    color: white;
+    background-color: black;
+    opacity: 0.6;
 }
