--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,8 +126,14 @@ footer li {
 .to-do-text2 {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 5px;
-  
     color: white;
     background-color: black;
     opacity: 0.6;
+}
+
+#form {
+    width: 100%;
+    height: 500px;
+    background: url('../images/form-background.jpg') no-repeat center center;
+    color: white;
 }
