--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,9 +131,34 @@ footer li {
     opacity: 0.6;
 }
 
-#form {
+#form-image {
     width: 100%;
     height: 500px;
     background: url('../images/form-background.jpg') no-repeat center center;
+}
+
+#text-box {
+    width: 50%;
+    height: 210px;
+    background-color: #df3bbd;
     color: white;
+    font-family:Dongle, Helvetica, sans-serif;
+    font-size: 25px;
+    opacity: 0.95;
+    padding: 10px;
+}
+
+
+#form-heading
+ {
+    font-family:Dongle, Helvetica, sans-serif;
+    display: block;
+    margin: auto;
+    font-size: 30px;
+}
+
+label {
+    display: inline-block;
+    width: 105px;
+    text-align: left;
 }
