--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Dongle&family=Lato:wght@300&family=Oswald&display=swap');
 
 /* remember reponsive design for 1200px, 900px and 800px screen */
-/* remember to update readme file */
+/* remember to update readme file - say thanks to fontawewsome, pexels (for all images individually)*/
 /* hover element for links */
 /*remember aria-labels for all links including navigation links */
 /* remember alt labels for all images including those inputted using CSS */
+/* add comments throughout explaining key bits of code */
+
 
 h1 {
     font-family:Dongle, Helvetica, sans-serif;
     display: block;
     margin: auto;
     font-size: 100px;
+}
+
+h2 {
+    font-family:Dongle, Helvetica, sans-serif;
+    display: block;
+    margin: auto;
+    font-size: 60px;
 }
 
 h3 {
@@ -74,6 +83,8 @@ iframe {
     font-family: Dongle, Helvetica, sans-serif;
     text-align: center;
 }
+
+/* ok to target a rather than li ? */
 
 .social-media a {
     text-decoration: none;
