--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,14 @@ h3 {
     font-size: 50px;
 } 
 
-/* p {
+ p {
     font-family:Dongle, Helvetica, sans-serif;
     display: block;
     margin: auto; 
     font-size: 35px;
-} */
+    position: relative;
+} 
+
 
 iframe {
     display: block;
@@ -184,7 +186,9 @@ label {
 }
 
 #chef-cooking-image {
-    margin-top: 0px;
     float: right;
     width: 25%;
+    height: 50px;
+    position: absolute;
+    margin: auto;
 }
