--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,15 +29,14 @@ h3 {
     font-size: 50px;
 } 
 
- /* p {
+/*  p {
     font-family:Dongle, Helvetica, sans-serif;
     display: block;
     margin: auto; 
     font-size: 35px;
     position: relative;
     color: black;
-} 
-*/
+} */
 
 
 iframe {
@@ -86,12 +85,19 @@ iframe {
     margin: auto;
     font-family: Dongle, Helvetica, sans-serif;
     text-align: center;
-    position: relative;
+    white-space: normal;
 }
 
 /* ok to target a rather than li ? */
+footer {
+    padding: 50px;
+    z-index: 9999;
+    position: staitc;
+    display: inline-block;
+    height: 100px;
+}
 
-.social-media a {
+.social-media i {
     text-decoration: none;
     color: black;
     font-size: 30px;
@@ -176,20 +182,32 @@ label {
 }
 
 #food-text {
-    float: none;
+    float: left;
     color: black;
-    margin: 0 100px 100px 0;
-    font-family:Dongle, Helvetica, sans-serif;
+    margin: 0 0 0 0;
+    font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     clear: left;
-    justify-content: left;
-    position: static;
+
 }
 
+#food-text > p {
+    margin: 0 50px 10px 0;
+    display: block;
+    font-size: 30px;
+}
+
+#food-container {
+    display: flex;
+}
 #chef-cooking-image {
     background: url('../images/chef-cooking.jpg') no-repeat right;
     width: 100%;
     height: 1000px;
     background-size: contain;
     justify-content: right;
+}
+
+#social-media-eat {
+    margin-top: 100px;
 }
