--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,15 +119,47 @@ footer li {
     margin-top: 10px;
 }
 
-.to-do-text {
+
+
+.to-do-fringe {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 5px;
+    font-size: 35px;
+    color: white;
     margin-right: 500px;
+    margin-bottom: 100px;
+    background-color: black;
+    opacity: 0.75;
+}
+
+.to-do-film {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 35px;
+    margin-bottom: 100px;
+    float: right;
+    color: white;
+    background-color: black;
+    opacity: 0.75;
+} 
+.to-do-text3 {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 35px;
+    margin-right: 500px;
+    margin-bottom: 50px;
+    color: white;
+    background-color: black;
+    opacity: 0.75;
+    float: left;
+}
+
+.to-do-text > p {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 25px;
+    margin-right: 100px;
     margin-bottom: 100px;
     color: white;
     background-color: black;
     opacity: 0.6;
-}
+} 
 
 #performance {
     height: 50%;
@@ -137,7 +169,7 @@ footer li {
 
 #edfest {
     width: 100%;
-    height: 500px;
+    height: 1500px;
     background: url('../images/dancing-performed.jpg') no-repeat center center;
 }
 /*
