--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,7 @@ iframe {
 /* ok to target a rather than li ? */
 footer {
     padding: 50px;
-    z-index: 9999;
-    position: staitc;
+    position: static;
     display: inline-block;
     height: 100px;
 }
@@ -125,36 +124,48 @@ footer li {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     color: white;
-    margin-right: 500px;
+    /* margin-right: 500px; */ 
     margin-bottom: 100px;
+    margin-right: 75%; 
+    margin-left: 10%;;
     background-color: black;
-    opacity: 0.75;
+    opacity: 0.8;
+    width: 50%;
+    text-align: center;
 }
 
 .to-do-film {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     margin-bottom: 100px;
-    float: right;
+    float: right; 
     color: white;
+    margin-bottom: 100px;
+    margin-right: 10%; 
+    margin-left: 75%;
     background-color: black;
-    opacity: 0.75;
+    opacity: 0.8;
+    width: 50%;
+    text-align: center;
 } 
 .to-do-text3 {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
-    margin-right: 500px;
+    margin-right: 75%; 
+    margin-left: 10%;
     margin-bottom: 50px;
     color: white;
     background-color: black;
     opacity: 0.75;
     float: left;
+    width: 50%;
+    text-align: center;
 }
 
 .to-do-text > p {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 25px;
-    margin-right: 100px;
+   /* margin-right: 100px; */
     margin-bottom: 100px;
     color: white;
     background-color: black;
@@ -169,8 +180,10 @@ footer li {
 
 #edfest {
     width: 100%;
-    height: 1500px;
+    height: 1200px;
     background: url('../images/dancing-performed.jpg') no-repeat center center;
+    background-position: center;
+    display: block;
 }
 /*
 .to-do-text2 {
@@ -190,11 +203,11 @@ footer li {
 #text-box {
     width: 50%;
     height: 210px;
-    background-color: #df3bbd;
+    background-color: #c2099d;
     color: white;
     font-family:Dongle, Helvetica, sans-serif;
     font-size: 25px;
-    opacity: 0.95;
+    opacity: 0.9;
     padding: 10px;
 }
 
@@ -232,6 +245,7 @@ label {
 #food-container {
     display: flex;
 }
+
 #chef-cooking-image {
     background: url('../images/chef-cooking.jpg') no-repeat right;
     width: 100%;
