--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ footer li {
 
 #edfest {
     width: 100%;
-    height: 1200px;
+    height: 1220px;
     background: url('../images/dancing-performed.jpg') no-repeat center center;
     background-position: center;
     display: block;
@@ -229,7 +229,6 @@ label {
 #food-text {
     float: left;
     color: black;
-    margin: 0 0 0 0;
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     clear: left;
@@ -239,7 +238,7 @@ label {
 #food-text > p {
     margin: 0 50px 10px 0;
     display: block;
-    font-size: 30px;
+    font-size: 32px;
 }
 
 #food-container {
@@ -250,10 +249,36 @@ label {
     background: url('../images/chef-cooking.jpg') no-repeat right;
     width: 100%;
     height: 1000px;
+    padding: 60px;
     background-size: contain;
     justify-content: right;
 }
 
 #social-media-eat {
     margin-top: 100px;
+}
+#travel-div {
+    margin: auto;
+    width: 60%;
+}
+
+#travel-text {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 35px; 
+    color: white;
+    background-color: black;
+    opacity: 0.75;
+    width: 50%;
+    text-align: center;
+    margin: auto;
+    padding: 50px;
+    position: absolute;
+} 
+
+#edin-travel {
+    background: url('../images/ed-travel.jpg') repeat center center;
+    width: 100%;
+    height: 1000px;
+    padding: 60px;
+    background-size: contain;
 }
