--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ iframe {
 
 #hero-image {
     width: 100%;
-    height: 1000px;
+    height: 1200px;
     background: url('../images/hero-image.jpg') no-repeat center center;
 }
 
@@ -78,6 +78,10 @@ iframe {
     margin: 20px 0 0 20px;
     float: left;
     position: absolute;
+    font-family:Dongle, Helvetica, sans-serif;
+    margin: 0 25% 0 0; 
+    font-size: 35px;
+    padding: 40px;
 }
 
 .social-media {
