--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 /* remember alt labels for all images including those inputted using CSS */
 /* add comments throughout explaining key bits of code */
 /*fix aria-labels for images inputed using css*/
+/* remember to make some changes to text spacing in pages between headers and paragraphs */
 
 h1 {
     font-family:Dongle, Helvetica, sans-serif;
@@ -219,7 +220,7 @@ footer li {
     background: url('../images/form-background.jpg') no-repeat center center;
 }
 
-#text-box {
+#form-text-container {
     width: 50%;
     height: 210px;
     background-color: #c2099d;
@@ -251,27 +252,58 @@ label {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     clear: left;
+    text-align: center;
+    justify-content: center;
 
 }
 
 #food-text > p {
-    margin: 0 50px 10px 0;
+    margin: 0 50px 10px 0; 
     display: block;
     font-size: 32px;
+    float: left;
+    padding: 40px;
 }
 
 #food-container {
-    display: flex;
+    display: flex; 
+    margin: auto;
+    padding: 30px;
+
 }
 
-#chef-cooking-image {
+/* #chef-cooking-image {
     background: url('../images/chef-cooking.jpg') no-repeat right;
     width: 100%;
     height: 1000px;
     padding: 60px;
     background-size: contain;
     justify-content: right;
+} */
+
+#laska-img {
+    float: left;
+    height:500px;
+    width: 40%;
 }
+
+#champagne-img {
+    height:500px;
+    width: 60%;
+}
+
+#oysters-img {
+    height:500px;
+    width: 80%;
+}
+
+#cocktails-img {
+    height:100px;
+    width: 20%;
+    float:left;
+    margin-top:500px;
+}
+
 
 #social-media-eat {
     margin-top: 100px;
@@ -300,4 +332,77 @@ label {
     height: 1000px;
     padding: 60px;
     background-size: contain;
+}
+
+@media screen and (max-width: 950px) {
+    h1 {
+        font-size: 35px;
+    }
+    #food-container {
+        width:80%;
+        height: 50px;
+        margin:auto;
+     }
+}
+
+
+@media screen and (max-width: 800px) {
+    #food-container {
+       width:80%;
+       height: 50px;
+       margin:auto;
+    }
+
+    #menu {
+        font-size: 15px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+    
+    iframe {
+        width: 90%;
+        height: 400px;
+    }
+
+    #hero-image {
+        width: 90%;
+        height: 1200px;
+    }
+
+    #form-text-container {
+        width: 50%;
+        height: 450px;
+        font-size: 20px;
+        column-count: 5;
+    }
+
+    #food-text {
+        font-size: 20px;
+    }
+    #travel-div {
+        font-size: 5px;
+    }
+
+    #travel-text {
+        font-size: 15px;
+    }
+    
+    h2 {
+        font-size: 25px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+}
+
+
+
+@media screen and (max-width: 1200px) {
 }
