--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ footer li {
 
 
 
-.to-do-fringe {
+#to-do-fringe {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     color: white;
@@ -158,20 +158,13 @@ footer li {
     opacity: 0.8;
     width: 50%;
     text-align: center;
+    padding: 10px;
 }
- .to-do-fringe:hover {
-    opacity: 1;
- }
- .to-do-film:hover {
-    opacity: 1;
- }
- .to-do-text3:hover {
-    opacity: 1;
- }
+ 
 
 
 
-.to-do-film {
+#to-do-film {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     margin-bottom: 100px;
@@ -185,7 +178,7 @@ footer li {
     width: 50%;
     text-align: center;
 } 
-.to-do-text3 {
+#to-do-book {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 35px;
     margin-right: 75%; 
@@ -199,7 +192,37 @@ footer li {
     text-align: center;
 }
 
-.to-do-text > p {
+#to-do-music {
+    font-family: Dongle, Helvetica, sans-serif;
+    font-size: 35px;
+    margin-bottom: 100px;
+    float: right; 
+    color: white;
+    margin-bottom: 100px;
+    margin-right: 10%; 
+    margin-left: 75%;
+    background-color: black;
+    opacity: 0.8;
+    width: 50%;
+    text-align: center;
+    padding: 10px;
+} 
+
+#to-do-fringe:hover {
+    opacity: 1;
+ }
+ #to-do-film:hover {
+    opacity: 1;
+ }
+ #to-do-book:hover {
+    opacity: 1;
+ }
+
+ #to-do-music:hover {
+    opacity: 1;
+ }
+
+#to-do-text > p {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 25px;
    /* margin-right: 100px; */
@@ -209,15 +232,9 @@ footer li {
     opacity: 0.6;
 } 
 
-#performance {
-    height: 50%;
-    width: 50%;
-    float: left;
-}
-
 #edfest {
     width: 100%;
-    height: 1220px;
+    height: 1445px;
     background: url('../images/dancing-performed.jpg') no-repeat center center;
     background-position: center;
     display: block;
