--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 /*fix aria-labels for images inputed using css*/
 /*remember to make some changes to text spacing in pages between headers and paragraphs */
 /*HTML comments?*/
-
+/*Opacity of images*/
 /* Changes to main text elements */
 h1 {
     font-family:Dongle, Helvetica, sans-serif;
@@ -154,9 +154,10 @@ footer li {
 #edfest {
     width: 100%;
     height: 1445px;
-    background: url('../images/dancing-performed.jpg') no-repeat center center;
+    background: url('../images/theatre.jpg') no-repeat center center;
     background-position: center;
     display: block;
+    background-size: auto 100%;
 }
 /* Styling of div elements containing text on events page */
 
@@ -164,7 +165,6 @@ footer li {
     font-family: Dongle, Helvetica, sans-serif;
     font-size: 20px;
 }
-
 
 #to-do-fringe {
     font-family: Dongle, Helvetica, sans-serif;
@@ -175,13 +175,12 @@ footer li {
     margin-right: 75%; 
     margin-left: 10%;;
     background-color: black;
-    opacity: 0.8;
+    opacity: 0.85;
     width: 50%;
     text-align: center;
     padding: 10px;
 }
  
-
 
 
 #to-do-film {
@@ -194,7 +193,7 @@ footer li {
     margin-right: 10%; 
     margin-left: 75%;
     background-color: black;
-    opacity: 0.8;
+    opacity: 0.85;
     width: 50%;
     text-align: center;
 } 
@@ -206,7 +205,7 @@ footer li {
     margin-bottom: 50px;
     color: white;
     background-color: black;
-    opacity: 0.75;
+    opacity: 0.85;
     float: left;
     width: 50%;
     text-align: center;
@@ -222,23 +221,11 @@ footer li {
     margin-right: 10%; 
     margin-left: 75%;
     background-color: black;
-    opacity: 0.8;
+    opacity: 0.85;
     width: 50%;
     text-align: center;
     padding: 10px;
 } 
-
-
-#to-do-text > p {
-    font-family: Dongle, Helvetica, sans-serif;
-    font-size: 25px;
-   /* margin-right: 100px; */
-    margin-bottom: 100px;
-    color: white;
-    background-color: black;
-    opacity: 0.6;
-} 
-
 
 /* Addition of hover effects of div elements on events page */
 
@@ -373,7 +360,7 @@ label {
     font-size: 35px; 
     color: white;
     background-color: black;
-    opacity: 0.75;
+    opacity: 0.8;
     width: 50%;
     text-align: center;
     margin: auto;
