--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ footer li {
 
 #to-do-fringe {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 1.85em;
     color: white;
     /* margin-right: 500px; */ 
     margin-bottom: 100px;
@@ -187,7 +187,7 @@ footer li {
 
 #to-do-film {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 1.85em;
     margin-bottom: 100px;
     float: right; 
     color: white;
@@ -201,7 +201,7 @@ footer li {
 } 
 #to-do-book {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 1.85em;
     margin-right: 75%; 
     margin-left: 10%;
     margin-bottom: 50px;
@@ -215,7 +215,7 @@ footer li {
 
 #to-do-music {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 1.85em;
     margin-bottom: 100px;
     float: right; 
     color: white;
