--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,7 @@ label {
 
 #travel-text {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px; 
+    font-size: 1.9em; 
     color: white;
     background-color: black;
     opacity: 0.8;
@@ -401,7 +401,7 @@ label {
     #form-text-container {
         width: 50%;
         height: 450px;
-        font-size: 20px;
+        font-size: 1.85em;
         column-count: 5;
     }
 
