--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,25 +333,27 @@ label {
 #food-container {
     display: flex; 
     margin: auto;
-    padding: 30px;
-
+    position: relative;
 }
 
  /*Styling of img elements on eat+drink page */
 
 #champagne-img {
-    height:500px;
-    width: 100%;
+    height:420px;
+    width: 50%;
+    padding-bottom: 20px;
 }
 
 #oysters-img {
-    height:500px;
-    width: 100%;
+    height: 420px;
+    width: 50%;
+    padding-bottom: 20px;
 }
 
 #social-media-eat {
     margin-top: 100px;
 }
+
 #travel-div {
     margin: auto;
     width: 60%;
