--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,13 @@ iframe {
 
 /* Addition of hero image on homepage */ 
 /* not sure whether to put an outer id into section element for overflow */
+#hero-outer {
+    height: 1200px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
 #hero-image {
     width: 100%;
     height: 1200px;
@@ -360,7 +367,7 @@ label {
 }
 
 /*Addition of background image on travel adive page. Note - I deliberately wanted to repeat the image */
-#travel-container {
+#travel-outer {
     height: 1000px;
     width: 94%;
     overflow: hidden;
