--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,23 +406,22 @@ label {
 }
 
 @media screen and (max-width: 800px) {
+    
     #food-container {
        width:80%;
        height: 50px;
        margin:auto;
     }
 
+    #food-text {
+        font-size: 1em;
+    }
+
     #menu {
         font-size: 15px;
     }
 
-    h1 {
-        font-size: 20px;
-    }
 
-    p {
-        font-size: 20px;
-    }
     
     iframe {
         width: 90%;
@@ -445,22 +444,29 @@ label {
         font-size: 20px;
     }
     #travel-div {
-        font-size: 5px;
+        font-size: 50px;
     }
 
     #travel-text {
-        font-size: 15px;
+        font-size: 0.5em;
+    }
+  
+    }
+    #travel-outer {
+        overflow:scroll;
     }
     
     h2 {
-        font-size: 25px;
+        font-size: 1em;
     }
 
     h3 {
-        font-size: 18px;
+        font-size: 0.9em;
     }
-}
 
+    #intro-text {
+        font-size: 1em;
+    }
 
 
 
