--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,7 +547,7 @@ label {
     #food-container {
        width: auto;
        height: auto;
-       margin:auto;
+       margin: auto;
     }
 
     #champagne-img {
@@ -670,11 +670,11 @@ label {
     }
 
     #newsletter-form {
-        margin-left: 50px;
+        margin-left: 20px;
     }
 
     .signup-button {
-        margin-left: 44%;
+        margin-left: 62%;
     }
     
 
@@ -689,6 +689,15 @@ label {
         font-size: 0.6em;
     }
 
+}
+
 @media screen and (max-width: 1200px) {
+
+    #form-text-container {
+        font-size: 1em;
+        display: block;
+        width: 70%;
+        height: auto;
+    } 
 
 }
